--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  firebase_core: ^3.12.0
+  firebase_storage: ^12.4.3
+  cloud_firestore: ^5.6.4
+  url_launcher: ^6.3.1
+  video_player: ^2.9.3
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
