--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   url_launcher: ^6.3.1
   video_player: ^2.9.3
   scrollable_positioned_list: ^0.3.8
+  go_router: ^14.8.0
 
 dev_dependencies:
   flutter_test:
